# OpenWinControls

./: .clang-format  .gitignore  .gitmodules  CHANGELOG.md  CMakeLists.txt  README.md
.github/workflows/: rolling_release.yml
linux/appimage/: org.owc.openwincontrols.appdata.xml  org.owc.openwincontrols.desktop
src/: GamepadWorker.cpp  GamepadWorker.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui
src/include/: ASCIIHIDMap.h  CharMapMode.h  ControllerFeature.h  GPDProducts.h  win.h
src/pages/: BackButtonsPage.cpp  BackButtonsPage.h  BackButtonsV1Page.cpp  BackButtonsV1Page.h  BackButtonsV2Page.cpp  BackButtonsV2Page.h  FaceButtonsPage.cpp  FaceButtonsPage.h  HomePage.cpp  HomePage.h  KeyboardMouseButtonsPage.cpp  KeyboardMouseButtonsPage.h  LogsPage.cpp  LogsPage.h  SettingsPage.cpp  SettingsPage.h  XinputButtonsPage.cpp  XinputButtonsPage.h  YamlBrowserPage.cpp  YamlBrowserPage.h
src/pages/Include/: DownloadWorker.cpp  DownloadWorker.h
src/pages/Widgets/: CharMapWidget.cpp  CharMapWidget.h  YmlProfileBox.cpp  YmlProfileBox.h
src/pages/backButtons/: BackButtonsPage.cpp  BackButtonsPage.h  BackButtonsV1Page.cpp  BackButtonsV1Page.h  BackButtonsV2Page.cpp  BackButtonsV2Page.h
src/pages/backButtons/Widgets/: BackButtonV1Widget.cpp  BackButtonV1Widget.h  BackButtonV2Widget.cpp  BackButtonV2Widget.h  KeySlotV1Widget.cpp  KeySlotV1Widget.h  KeySlotV2Widget.cpp  KeySlotV2Widget.h
src/pages/faceButtons/: FaceButtonsPage.cpp  FaceButtonsPage.h  KeyboardMouseButtonsPage.cpp  XinputButtonsPage.cpp  XinputButtonsPage.h
src/pages/faceButtons/Widgets/: ButtonBlockWidget.h  DirectionalButtonBlockWidget.cpp  DirectionalButtonBlockWidget.h  ShoulderButtonBlockWidget.cpp  ShoulderButtonBlockWidget.h  SingleButtonBlockWidget.cpp  SingleButtonBlockWidget.h
src/pages/yamlBrowser/: YamlBrowserPage.cpp  YamlBrowserPage.h
src/resources/: res.qrc
